--- a/src/static/scss/components/_tool-bar.scss
+++ b/src/static/scss/components/_tool-bar.scss
@@ -15,6 +15,8 @@
   height: 100%;
   padding-top: $navbar-height + 1rem;
 
+  transition: all .25s $swift-out;
+
   border-left: 1px solid $color-grayish;
   background-color: #FFF;
 
@@ -85,6 +87,7 @@
 
       &::after {
         font-weight: 400 !important;
+
         background-color: rgba(#FFF, .95);
       }
 
