--- a/src/templates/components/document-editor.html
+++ b/src/templates/components/document-editor.html
@@ -11,3 +11,20 @@
     <span class="message -saving">Salvando</span>
   </div>
 </article>
+
+<article class="-compare js-textEditorWrapper">
+  <header class="-editable js-documentHeader">
+    <span class="date -active">Aberto até 30/11/2019</span>
+    <h1 class="js-title">{{ object.title }}</h1>
+    <textarea name="title" class="title _hidden js-titleInput js-input">{{ object.title }}</textarea>
+    <p class="description js-description">{{ object.description }}</p>
+    <textarea name="description" class="_hidden description js-descriptionInput js-input">{{ object.description }}</textarea>
+    <hr>
+  </header>
+  {% include "components/contextual-toolbar.html" %}
+  <div tabindex="1" class="js-textEditor"></div>
+  <div class="save-message js-saveMessage">
+    <span class="message">Atualizado em <span class="js-timestamp">{{object.versions.first.created|date:'d/m/Y à\s H\hi'}}</span></span>
+    <span class="message -saving">Salvando</span>
+  </div>
+</article>
