--- a/src/static/scss/components/_input-select.scss
+++ b/src/static/scss/components/_input-select.scss
@@ -1,5 +1,68 @@
 .input-select {
-  @extend .input-text;
+  position: relative;
+
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+
+  margin-top: 1rem;
+
+  & .errorlist {
+    position: absolute;
+    top: 3.25rem;
+
+    & > li {
+      font-size: $font-size-nano;
+
+      padding: 0;
+
+      letter-spacing: 1px;
+      text-transform: uppercase;
+
+      color: $color-red;
+      background-color: transparent;
+    }
+  }
+
+  &.-required {
+    position: relative;
+
+    &::after {
+      font-size: $font-size-centi;
+
+      position: absolute;
+      top: .2rem;
+      right: .45rem;
+
+      display: block;
+
+      content: '*';
+
+      color: $color-gray;
+    }
+  }
+
+  label {
+    font-size: $font-size-mili;
+    font-weight: 400;
+
+    position: absolute;
+    top: 0;
+    left: .875rem;
+
+    padding-bottom: .1rem;
+
+    transition: all .2s $swift-out;
+    transform: translateY(1rem);
+    pointer-events: none;
+
+    color: $color-gray;
+  }
+
+  & select:focus + label,
+  & select:active + label {
+    color: $color-brand;
+  }
 
   .select {
     position: relative;
@@ -10,8 +73,26 @@
     select {
       flex: 1;
       color: $color-gray;
+      padding: .25rem .875rem;
+      box-sizing: border-box;
+      height: 3.25rem;
 
       background-color: #FFF;
+    }
+
+    &.-filled {
+      & select {
+        padding-top: 1.65rem !important;
+      }
+
+      & label {
+        font-size: .55rem;
+        font-weight: 500;
+
+        transform: translateY(.55rem);
+        letter-spacing: 1px;
+        text-transform: uppercase;
+      }
     }
 
     option {
