--- a/src/templates/pages/invite-participants.html
+++ b/src/templates/pages/invite-participants.html
@@ -53,14 +53,14 @@
         <input type="text" name="group_name" id="id_group_name" {% if object %}value="{{ object.thematic_group.name }}"{% endif %}>
         <label for="id_group_name">Nome do grupo:</label>
       </div>
-      <div class="input-select">
+      <div class="input-select -required">
         <div class="select">
-          <label for="id_version_name">Versão do Documento:</label>
           <select id="id_version_name" required name="version" {% if not versions %}disabled{% endif %}>
             {% for version in versions %}
-              <option value="{{version.number}}">{{version.name}}</option>
+              <option value="{{version.pk}}">{{version.name}}</option>
             {% endfor %}
           </select>
+          <label for="id_version_name">Versão do Documento:</label>
           <div class="icon"><i class="arrow"></i></div>
         </div>
         {% if not versions %}
