refactor nav bar

--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -59,6 +59,8 @@
 @import 'components/info-message';
 @import 'components/link-back';
 @import 'components/error-list';
+@import 'components/dropdown-menu';
+@import 'components/breadcrumb-menu';
 
 // Vendor
 @import 'vendor/tooltip';
