--- a/src/templates/pages/invite-participants.html
+++ b/src/templates/pages/invite-participants.html
@@ -17,7 +17,7 @@
 {% block navbar_admin_tools %}
   <div class="project">
     <span class="title js-documentTitle">{{ object.document.title }}</span>
-    <ul class="breadcrumb">
+    <ul class="breadcrumb-menu">
       <a href="#">Editar Grupo Fechado</a>
     </ul>
   </div>
