--- a/src/templates/structure/base.html
+++ b/src/templates/structure/base.html
@@ -48,6 +48,9 @@
       {% if request.user.profile.profile_type == 'owner' %}
       <div class="tools">
         <a href="{% url 'owner_documents' %}" {% if current_path|endswith:'/dashboard/' %}class="-active"{% endif %}>Meus documentos</a>
+        <a href="#" class="icon -settings" aria-label="Configurar">
+          {% include "svgs/settings-icon.html" %}
+        </a>
       </div>
       {% endif %}
     </div>
